# SImMER

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  VISION.md  azure-pipelines.yml  codecov.yml  config.csv  config_shane.csv  pyproject.toml  readthedocs.yml  setup.py
.dependabot/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Docs.yml  Windows.yml  codeql-analysis.yml  conda_publish.sh  conda_publish.yml  docs.yml  greetings.yml  pythonpublish.yml  run_tests.yml  style.yml  yaml.yml
docs/: Makefile  conf.py  execute_notebooks.py  index.rst  make.bat  notebook_requirements.txt  requirements.txt
docs/pages/: FAQ.rst  PHARO_reduction.ipynb  Shane_reduction.ipynb  Using.rst  about.rst  common_aberrations  common_aberrations.rst  contributing.rst  installation.rst  integrations.rst  logsheet.csv  overview.rst  plotting.rst  versioning.rst
docs/source/: modules.rst  simmer.rst  simmer.tests.rst
src/simmer/: Contrast.py  PHARO_reduction.ipynb  __init__.py  add_dark_exp.py  analyze_image.py  check_logsheet.py  contrast.py  create_config.py  darks.py  drivers.py  flats.py  image.py  insts.py  make_triceratops_contrasts.py  plotting.py  registration.py  run_night.py  scipy_utils.py  search_headers.py  sky.py  summarize.py  utils.py  validate_config.py
src/simmer/Examples/PHARO/: PHARO_reduction.ipynb  logsheet.csv
src/simmer/Examples/Shane/: Shane_reduction.ipynb  config_shane.csv  logsheet.xlsx  logsheet_incorrect.xlsx  ~$logsheet_incorrect.xlsx
src/simmer/K2/: CC_py.py  CC_test_py.py  Contrast Curve.ipynb  testing1.py
src/simmer/schemas/: __init__.py  custom_validator.py  example_plotting.yml  plotting.yml  plotting_schema.yml  read_yml.py
src/simmer/tests/: test_config.csv  test_config_test_case.csv  test_contrast.py  test_image_config.csv  test_validate.yml  tests_1.py  tests_io.py  tests_reduction.py
