[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm", "extension_helpers"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src/simmer/__init__.py
  | docs/tutorials
)/
'''

[tool.isort]
skip_glob = ["docs/tutorials/*.py"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["PIL", "astropy", "cerberus", "matplotlib", "nbconvert", "nbformat", "numpy", "openpyxl", "pandas", "photutils", "scipy", "setuptools", "skimage", "tqdm", "yaml"]
