[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simmer"

authors = [
    {name = "Arjun Savel", email = "asavel@gmail.com"},
    {name= "Lea Hirsch"},
    {name= "Holden Gill"},
    {name= "Courtney D. Dressing"},
    {name= "David R. Ciardi"}
]
description = "Stellar Image Maturation via Efficient Reduction"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["astronomy"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "tqdm",
    "pandas==1.2.3",
    "astropy >=5.1",
    "openpyxl>=2.5.12",
    "scipy",
    "matplotlib",
    "Scikit-image>=0.16.2",
    "pyyaml>=5.3.1",
    "numba",
    "emcee",
    "cerberus>=1.3.2",
    "photutils>=1.5.0",
]
dynamic = ["version"]


[tool.setuptools_scm]

[project.optional-dependencies]
docs = ["nbsphinx",
        "nbconvert",
        "pygments>=2.4.2",
        "Jinja2==3.1.3",
        "sphinx-book-theme"]

[project.urls]
Homepage = "https://github.com/arjunsavel/SImMER"
Issues = "https://github.com/arjunsavel/SImMER/issues"
Documentation = "https://simmer.readthedocs.io"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src/simmer/__init__.py
  | docs/tutorials
)/
'''

[tool.isort]
skip_glob = ["docs/tutorials/*.py"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["PIL", "astropy", "emcee", "cerberus", "matplotlib", "nbconvert", "nbformat", "numpy", "openpyxl", "pandas", "photutils", "scipy", "setuptools", "skimage", "tqdm", "yaml", "numba"]
